# Homework_09

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: tests.yml
config/: settings.py  urls.py
custom_user_app/: admin.py  apps.py  urls.py  views.py
custom_user_app/forms/: CustomAuthenticationForm.py  CustomUserCreationForm.py  __init__.py
custom_user_app/migrations/: 0001_initial.py
custom_user_app/models/: CustomUser.py  __init__.py
custom_user_app/templates/custom_user_app/: base.html  login.html  logout.html  register.html
store_app/: admin.py  apps.py  urls.py  views.py
store_app/forms/: __init__.py  form_category.py  form_product.py
store_app/management/commands/: gen_data.py
store_app/migrations/: 0001_initial.py
store_app/models/: base.py  category.py  product.py
store_app/templates/store_app/: add_or_edit_prod_or_cat.html  categories_list.html  product_delete.html  product_detail.html  product_list.html
store_app/tests/: conftest.py  test_models.py
