[project]
name = "homework-09"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "python-dotenv>=1.2.1",
    "faker>=40.8.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 59
